fixed spacing hopefully

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 }
 
 .tagwrapper {
-  margin: 16px 16px 16px 8px;
+  margin: 16px 16px 16px 0px;
   display: flex;
   overflow-x: scroll;
   width: 100%;
@@ -37,7 +37,7 @@
   background-color: #F1F3F4;
   color: #484848;
   margin-left: 16px;
-  margin-right: 8px;
+  margin-right: 16px;
   border-radius: 8px;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .topbar {
-  margin-right: 8px;
+  margin-right: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
