--- a/styles/recipepreview.module.css
+++ b/styles/recipepreview.module.css
@@ -33,7 +33,7 @@
     display: flexbox;
     height: 112px;
     width: 83px;
-    margin-right: 8px;
+    margin-right: 16px;
     float: right;
     align-self: center;
     justify-self: center;
@@ -47,11 +47,10 @@
 }
 
 .left {
-    display: inline;
+    display: inline-block;
     height: 112px;
     width: calc(100vw - 131px);
-    margin-left: 16px;
-    display: inline-block;
+    padding-left: 16px;
     vertical-align: middle;
 }
 
@@ -62,7 +61,6 @@
     width: 100vw;
     height: fit-content;
     margin-left: 0px;
-    margin-right: 16px;
     margin-bottom: 24px;
     margin-top: 24px;
     justify-content: space-between;
@@ -72,7 +70,7 @@
 
 .divider {
     height: 2px;
-    width: calc(100% - 24px);
+    width: calc(100% - 32px);
     margin-left: 16px;
     background-color: #F1F3F4;
     display: flexbox;
